Update configuration files and enhance documentation for Tennis y Fragancias
- Modified .gitignore to specify that only the local .env file should be ignored.
- Updated README_PORTABILIDAD.md to improve installation instructions and clarify the project's portability features.
- Adjusted env.example to reflect the correct database name and company details for Tennis y Fragancias.
- Enhanced CSS styles in header.php for better visual consistency and user interaction across the application.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-# Archivos de configuración sensibles
+# Archivos de configuración sensibles (solo .env local)
 app/config/.env
-app/config/config.php
 
 # Logs
 *.log
