--- a/app/config/env.example
+++ b/app/config/env.example
@@ -1,62 +1,33 @@
-# =============================================
-# CONFIGURACIÓN DE BASE DE DATOS
-# =============================================
-# Copia este archivo como .env y ajusta los valores según tu entorno
-
 # Configuración de Base de Datos
 DB_HOST=localhost
-DB_NOMBRE=tennisyzapatos_db
+DB_NOMBRE=tennisyfragancias_db
 DB_USUARIO=root
 DB_PASSWORD=
 DB_CHARSET=utf8mb4
 DB_PUERTO=3306
 
-# =============================================
-# CONFIGURACIÓN DE LA APLICACIÓN
-# =============================================
-
-# URL Base de la aplicación
+# Configuración de la Aplicación
 URL_BASE=http://localhost/tennisyfragancias/
-
-# Configuración de la empresa
-EMPRESA_NOMBRE=Tennis y Zapatos
+EMPRESA_NOMBRE=Tennis y Fragancias
 EMPRESA_CIUDAD=Barrancabermeja
 EMPRESA_DEPARTAMENTO=Santander
 EMPRESA_PAIS=Colombia
-EMPRESA_EMAIL=info@tennisyzapatos.com
+EMPRESA_EMAIL=info@tennisyfragancias.com
 EMPRESA_TELEFONO=+57 300 123 4567
 
-# =============================================
-# CONFIGURACIÓN DE MERCADOPAGO
-# =============================================
-# Obtén estas credenciales en: https://www.mercadopago.com.co/developers/
+# MercadoPago (opcional)
 MERCADOPAGO_PUBLIC_KEY=TU_PUBLIC_KEY_AQUI
 MERCADOPAGO_ACCESS_TOKEN=TU_ACCESS_TOKEN_AQUI
 
-# =============================================
-# CONFIGURACIÓN DE EMAIL
-# =============================================
+# Email (opcional)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USUARIO=tu_email@gmail.com
 EMAIL_PASSWORD=tu_password
-EMAIL_REMITENTE=info@tennisyzapatos.com
-EMAIL_REMITENTE_NOMBRE=Tennis y Zapatos
+EMAIL_REMITENTE=info@tennisyfragancias.com
+EMAIL_REMITENTE_NOMBRE=Tennis y Fragancias
 
-# =============================================
-# CONFIGURACIÓN DE SEGURIDAD
-# =============================================
-# Genera una clave secreta única para tu aplicación
-APP_SECRET_KEY=tu_clave_secreta_muy_larga_y_segura_aqui
-
-# =============================================
-# CONFIGURACIÓN DE ENTORNO
-# =============================================
-# Valores: development, production
+# Seguridad
+APP_SECRET_KEY=clave_secreta_por_defecto_cambiar_en_produccion
 APP_ENV=development
-
-# =============================================
-# CONFIGURACIÓN DE DEBUG
-# =============================================
-# Valores: true, false
 DEBUG_MODE=true
